<resources>
    <string name="app_name">joindesign</string>

    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login">Login</string>
    <string name="choose_store">Choose Store</string>
    <string name="search">Search</string>
    <string name="dashboard">Dashboard</string>
    <string name="warehouse_count">%1$d Warehouse</string>
    <string name="store_count">%1$d Store</string>
    <string name="no_description_available">No Description Available</string>
    <string name="material_detail">Material Detail</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="contact_name">Contact Name</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="search_raw_material">Search Raw Material...</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
</resources>
